--- a/relatorio.html
+++ b/relatorio.html
@@ -48,11 +48,11 @@ button.clear-btn:hover { background-color: #d73833; }
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="#">Início</a>
-        <a href="#">Preços</a>
-        <a href="#">Loja</a>
-        <a href="#">Relatório</a>
+        <a href="tabela.html">Preços</a>
+        <a href="shop.html">Loja</a>
+        <a href="relatorio.html">Relatorio</a>
         <a href="#">Termos de Uso</a>
-        <a href="#">Funcionários</a>
+        <a href="funcionarios.html">Funcionarios</a>
         <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
