--- a/shop.html
+++ b/shop.html
@@ -75,11 +75,11 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="#">Início</a>
-        <a href="#">Preços</a>
-        <a href="#">Loja</a>
-        <a href="#">Relatorio</a>
+        <a href="tabela.html">Preços</a>
+        <a href="shop.html">Loja</a>
+        <a href="relatorio.html">Relatorio</a>
         <a href="#">Termos de Uso</a>
-	    <a href="#">Funcionarios</a>
+        <a href="funcionarios.html">Funcionarios</a>
         <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
