--- a/shop.html
+++ b/shop.html
@@ -74,7 +74,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="logo">021 CUSTOMS</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
         <a href="tabela.html">Preços</a>
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
