--- a/tabela.html
+++ b/tabela.html
@@ -181,7 +181,7 @@ document.addEventListener("keydown", function(e) {
     </div>
 
     <nav class="d-none d-md-flex align-items-center nav-links">
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
         <a href="tabela.html">Preços</a>
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
