--- a/relatorio.html
+++ b/relatorio.html
@@ -47,7 +47,7 @@ button.clear-btn:hover { background-color: #d73833; }
         <div class="logo">021 CUSTOMS</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
         <a href="tabela.html">Preços</a>
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
