--- a/calculadora.html
+++ b/calculadora.html
@@ -87,23 +87,51 @@ document.addEventListener('keydown', function(e) {
     <!-- Cards de Itens -->
     <div class="col-lg-8 col-md-12">
       <div class="row">
+
+        <!-- TUNAGEM -->
         <div class="card col-12">
           <div class="card-header"><h3>TUNAGEM</h3></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="430000"><label class="form-check-label">Tunagem Full /S Desconto</label></div></li>
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="395000"><label class="form-check-label">Tunagem Full /C Desconto</label></div></li>
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="110000"><label class="form-check-label">Motor</label></div></li>
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="70000"><label class="form-check-label">Freio</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="150000"><label class="form-check-label">Motor</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Bloco de Motor</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Som do Motor</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="150000"><label class="form-check-label">Freio</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="280000"><label class="form-check-label">Transmissão</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="250000"><label class="form-check-label">Turbo</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="95000"><label class="form-check-label">Hidráulica</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="400000"><label class="form-check-label">Blindagem</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Doors</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Saia</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Parachoque Dianteiro</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Capô</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Escapamento</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Arch Cover</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Gaiola de Proteção</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Parachoque Traseiro</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Buzina</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Painel</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Para Lama</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Bancos</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Grelha</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="80000"><label class="form-check-label">Vidro</label></div></li>
           </ul>
         </div>
 
+        <!-- ESTÉTICA -->
         <div class="card col-12 mt-3">
           <div class="card-header"><h3>ESTÉTICA</h3></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="55000"><label class="form-check-label">Vidro Fume</label></div></li>
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="35000"><label class="form-check-label">Saias</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Primária</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Secundária</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Cromado</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Perolado</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Decal</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Xenon</label></div></li>
+	    <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Neon</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Neon</label></div></li>
           </ul>
         </div>
+
       </div>
     </div>
 
