--- a/calculadora.html
+++ b/calculadora.html
@@ -128,7 +128,7 @@ document.addEventListener('keydown', function(e) {
             <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Decal</label></div></li>
             <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Xenon</label></div></li>
 	    <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Neon</label></div></li>
-            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Neon</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Fumaça</label></div></li>
           </ul>
         </div>
 
@@ -204,3 +204,4 @@ $('#btnCopy').click(function(){
 
 </body>
 </html>
+
