Update employee images in funcionarios.html
Updated employee card images and added a new employee image for Carol Amud.

--- a/funcionarios.html
+++ b/funcionarios.html
@@ -61,7 +61,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <div class="row justify-content-center mb-4">
     <div class="col-lg-3 col-md-6 mb-4">
       <div class="card card-employee">
-        <img src="https://imgur.com/hU88EYq.png" class="card-img-top" alt="Carol Amud">
+        <img src="https://imgur.com/uyT33CR.png" class="card-img-top" alt="Carol Amud">
         <div class="card-body text-center">
           <h5 class="mb-0">Carol Amud</h5>
           <p class="small text-muted">RESP MECÂNICA</p>
@@ -159,4 +159,5 @@ document.addEventListener('dragstart', function(e){ e.preventDefault(); });
 
 </body>
 </html>
+
 
